<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.artyom.fullcalc.calc">
    <!--Написать калькулятор с полноценным пользовательским
    интерфейсом, используя разметку типа RelativeLayout и шаблон
     Empty Activity (смотри рис. №2).
      По нажатию на кнопку «=» функция calc()
      обрабатывает вычисление, результат выводится в поле ввода.
       Для фона представлений(View) используйте параметр
       android:background="@color/colorAccent".-->
<EditText
    android:id="@+id/edit_out_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_display"
    android:layout_margin="2dp"/>

    <Button
    android:id="@+id/button_7"
    android:layout_width="85dp"
    android:layout_height="wrap_content"
        android:text="@string/btn_7"
        android:paddingBottom="10dp"
        android:layout_below="@+id/edit_out_text"
        android:background="@drawable/background_valuecolor"
        android:layout_margin="2dp"/>
    <Button
    android:id="@+id/button_8"
    android:layout_width="85dp"
    android:layout_height="wrap_content"
      android:text="@string/btn_8"
        android:layout_toRightOf ="@id/button_7"
        android:layout_below="@+id/edit_out_text"
    android:paddingBottom="10dp"
        android:background="@drawable/background_valuecolor"
        android:layout_margin="2dp"/>

    <Button
        android:id="@+id/button_9"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
       android:text="@string/btn_9"
        android:paddingBottom="10dp"
        android:layout_toRightOf ="@id/button_8"
        android:layout_below="@+id/edit_out_text"
        android:background="@drawable/background_valuecolor"
        android:layout_margin="2dp"/>
    <Button
        android:id="@+id/button_div"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_div"
        android:paddingBottom="10dp"
        android:layout_toRightOf ="@id/button_9"
        android:layout_below="@+id/edit_out_text"
        android:background="@drawable/background_operation"
        android:layout_margin="2dp"
        />
    <Button
    android:id="@+id/button_4"
    android:layout_width="85dp"
    android:layout_height="wrap_content"
    android:text="@string/btn_4"
    android:paddingBottom="10dp"
    android:layout_below="@+id/button_7"
        android:background="@drawable/background_valuecolor"
        android:layout_margin="2dp"/>
    <Button
        android:id="@+id/button_5"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_5"
        android:paddingBottom="10dp"
        android:layout_below="@+id/button_9"
        android:layout_toRightOf ="@id/button_4"
        android:background="@drawable/background_valuecolor"
        android:layout_margin="2dp"
        />
    <Button
        android:id="@+id/button_6"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_6"
        android:paddingBottom="10dp"
        android:layout_below="@+id/button_8"
        android:layout_toRightOf ="@id/button_5"
        android:background="@drawable/background_valuecolor"
        android:layout_margin="2dp"
        />
    <Button
        android:id="@+id/button_mult"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_mult"
        android:paddingBottom="10dp"
        android:layout_below="@+id/button_9"
        android:layout_toRightOf ="@id/button_6"
        android:background="@drawable/background_operation"
        android:layout_margin="2dp"
        />
    <Button
        android:id="@+id/button_1"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_1"
        android:paddingBottom="10dp"
        android:layout_below="@+id/button_4"
        android:background="@drawable/background_valuecolor"
        android:layout_margin="2dp"
        />
    <Button
        android:id="@+id/button_2"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_2"
        android:paddingBottom="10dp"
        android:layout_below="@+id/button_5"
        android:layout_toRightOf ="@id/button_1"
        android:background="@drawable/background_valuecolor"
        android:layout_margin="2dp"
        />
    <Button
        android:id="@+id/button_3"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_3"
        android:paddingBottom="10dp"
        android:layout_below="@+id/button_6"
        android:layout_toRightOf ="@id/button_2"
        android:background="@drawable/background_valuecolor"
        android:layout_margin="2dp"
        />
    <Button
        android:id="@+id/button_min"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_min"
        android:paddingBottom="10dp"
        android:layout_below="@+id/button_mult"
        android:layout_toRightOf ="@id/button_3"
        android:background="@drawable/background_operation"
        android:layout_margin="2dp"
        />
    <Button
        android:id="@+id/button_0"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_0"
        android:paddingBottom="10dp"
        android:layout_below="@+id/button_1"
        android:background="@drawable/background_valuecolor"
        android:layout_margin="2dp"
        />
    <Button
        android:id="@+id/button_C"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_C"
        android:paddingBottom="10dp"
        android:layout_below="@+id/button_3"
        android:layout_toRightOf ="@id/button_0"
        android:background="@drawable/background_operation"
        android:layout_margin="2dp"
        />
    <Button
        android:id="@+id/button_plus"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_plus"
        android:paddingBottom="10dp"
        android:layout_below="@+id/button_min"
        android:layout_toRightOf ="@id/button_C"
        android:background="@drawable/background_operation"
        android:layout_margin="2dp"
        />
    <Button
        android:id="@+id/button_equals"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_eq"
        android:paddingBottom="10dp"
        android:layout_below="@+id/button_0"
        android:background="@drawable/background_operation"
        android:layout_margin="2dp"
        />
</RelativeLayout>
